objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ContractType__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other (0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown (1)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SLA (100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA (200)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPC (300)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CoordinateFormat__c</fullName>
        <label>Coordinate Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostDescription__c</fullName>
        <label>Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption1__c</fullName>
        <label>Cost Option1</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Named User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage in TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CostOption2__c</fullName>
        <label>Cost Option2</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Amount__c</fullName>
        <label>Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Cost_Derived_Flag__c</fullName>
        <label>Cost Derived Flag</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CountryCode__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OTH - Any Other Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABW - Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFG - Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGO - Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIA - Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA - Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALB - Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AND - Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANT - Netherlands Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE - United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG - Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARM - Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM - American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATA - Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATF - French Southern Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATG - Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS - Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUT - Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZE - Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI - Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEL - Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEN - Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFA - Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGD - Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGR - Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR - Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHS - Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIH - Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLR - Belarus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Country__c</fullName>
        <label>Country</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Currently_Consumed_Resource__c</fullName>
        <label>Currently Consumed Resource</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DHCPUse__c</fullName>
        <label>DHCP Use</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DNSHostName__c</fullName>
        <label>DNS Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDirectoryServiceFlag__c</fullName>
        <label>DS Directory Service Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsControllerFlag__c</fullName>
        <label>DS DNS Controller Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsDomainFlag__c</fullName>
        <label>DS DNS Domain Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSDnsForestFlag__c</fullName>
        <label>DS DNS Forest Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSGlobalCatalogFlag__c</fullName>
        <label>DS Global Catalog Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSKerberosDistributionCenterFlag__c</fullName>
        <label>DS Kerberos Distribution Center Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSPrimaryDomainControllerFlag__c</fullName>
        <label>DS Primary Domain Controller Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSTimeServiceFlag__c</fullName>
        <label>DS Time Service Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DSWritableFlag__c</fullName>
        <label>DS Writable Flag</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DataRate__c</fullName>
        <label>Data Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DatasetId__c</fullName>
        <label>DatasetId</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DcSiteName__c</fullName>
        <label>DC Site Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DefaultBlockSize__c</fullName>
        <label>Default Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeleteStatusCode__c</fullName>
        <label>Delete Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the instance.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Device_Interface__c</fullName>
        <label>Device Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Serial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-HIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus mouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADB (Apple Desktop Bus)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus mouse DB-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus mouse micro-DIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_Type__c</fullName>
        <label>Display Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiscan Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiscan Monochrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Frequency Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Frequency Monochrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DnsForestName__c</fullName>
        <label>DNS Forest Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentSize__c</fullName>
        <label>Document Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentStatus__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentType__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerAddressType__c</fullName>
        <label>Domain Controller Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DS_INET_ADDRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS_NETBIOS_ADDRESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerAddress__c</fullName>
        <label>Domain Controller Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainControllerName__c</fullName>
        <label>Domain Controller Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainGuid__c</fullName>
        <label>Domain GUID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainName__c</fullName>
        <label>Domain Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DomainType__c</fullName>
        <label>Domain Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J2EE Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT Domain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSCSITargetID__c</fullName>
        <label>Drive SCSI Target ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSize__c</fullName>
        <label>Drive Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriverInterfaceType__c</fullName>
        <label>Driver Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Enabler_Type__c</fullName>
        <label>Enabler Type</label>
        <picklist>
            <picklistValues>
                <fullName>PR/SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z/VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMware Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris Resource Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPAR; VPar; HP nPartitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Hyper-V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMware ESX Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMware Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xen Hypervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDOM Hypervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnvironmentSpecification__c</fullName>
        <label>Environment Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ExpansionInterface__c</fullName>
        <label>Expansion Interface</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Expansion__c</fullName>
        <label>Expansion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exploration_Date__c</fullName>
        <label>Exploration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting from RF Config Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Config Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAssetRuleClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule Asset Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>Base Elements (Rule Asset Class)</relationshipLabel>
        <relationshipName>Base_Elements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Service of</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Business Services</relationshipLabel>
        <relationshipName>Business_ServicesBE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Base Elements</relationshipLabel>
        <relationshipName>Base_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores location of the instance</description>
        <inlineHelpText>Stores location of the instance</inlineHelpText>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__BMC_BaseElement__c.BMCServiceDesk__Class__c</field>
                <operation>equals</operation>
                <value>BMC_PhysicalLocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Base Elements (Location)</relationshipLabel>
        <relationshipName>FKBase_Elements_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores model of the instance</description>
        <inlineHelpText>Select the model of the instance.</inlineHelpText>
        <label>Model Name</label>
        <referenceTo>BMCServiceDesk__Model__c</referenceTo>
        <relationshipLabel>Base Elements (Model)</relationshipLabel>
        <relationshipName>Base_Elements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FailedAutomaticIdentification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FailedAutomaticIdentification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fax__c</fullName>
        <label>Fax</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Size__c</fullName>
        <label>File System Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Type__c</fullName>
        <label>File System Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirmwareVersion__c</fullName>
        <label>Firmware Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Fixed__c</fullName>
        <label>Fixed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FlashMemory__c</fullName>
        <label>Flash Memory</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FormFactor__c</fullName>
        <label>Form Factor</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SODIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRIMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TQFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPBGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Frequency__c</fullName>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Full_Duplex__c</fullName>
        <label>Full Duplex</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GridLocation__c</fullName>
        <label>Grid Location</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GroupAddresses__c</fullName>
        <label>Group Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Height__c</fullName>
        <label>Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__High_Water_Mark__c</fullName>
        <label>High Water Mark</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__History__c</fullName>
        <label>History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HorizontalResolution__c</fullName>
        <label>Horizontal Resolution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HostName__c</fullName>
        <label>Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>